crates/credential/tests/probes/dyn_credential_const_key.stderr
error[E0191]: the value of the associated types `Properties`, `Scheme` and `State` in `nebula_credential::Credential` must be specified
  --> tests/probes/dyn_credential_const_key.rs:22:24
   |
22 | fn _take_bare(_c: &dyn Credential) {}
   |                        ^^^^^^^^^^
   |
help: specify the associated types
   |
22 | fn _take_bare(_c: &dyn Credential<Properties = /* Type */, Scheme = /* Type */, State = /* Type */>) {}
   |                                  ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0038]: the trait `nebula_credential::Credential` is not dyn compatible
  --> tests/probes/dyn_credential_const_key.rs:25:10
   |
25 |     _c: &dyn Credential<Properties = P, Scheme = S, State = St>,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `nebula_credential::Credential` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> src/contract/credential.rs
   |
   |     const KEY: &'static str;
   |           ^^^ the trait is not dyn compatible because it contains associated const `KEY`
   = help: the following types implement `nebula_credential::Credential`:
             nebula_credential::ApiKeyCredential
             nebula_credential::BasicAuthCredential
             nebula_credential::BearerTokenCredential
             nebula_credential::OAuth2Credential
             nebula_credential::SharedKeyCredential
             nebula_credential::SigningKeyCredential
             nebula_credential::NoCredential
           consider defining an enum where each variant holds one of these types,
           implementing `nebula_credential::Credential` for this new enum and using it instead
